# agentic-customer-intelligence

./: .env.example  .gitignore  README.md  codex_ml_clustering_plan.md  codex_persona_rag_fastapi_react_plan.md  docker-compose.yml  pyproject.toml
agentic-personas/: README.md  run_chat.py
agentic-personas/backend/: .env.example  README.md  requirements.txt
agentic-personas/backend/app/: __init__.py  answer_style.py  config.py  knowledge_loader.py  llm_client.py  main.py  mongo_store.py  persona_agent.py  persona_loader.py  prompt_builder.py  retriever.py  schemas.py  utils.py  vector_store.py
agentic-personas/backend/outputs/: persona_answer_battery.json
agentic-personas/backend/scripts/: evaluate_persona_quality.py  generate_agent_quality_report.py  ingest_knowledge_base.py  test_persona_answers.py  test_retrieval.py
agentic-personas/knowledge_base/persona_0/: digital_wallet_cashback.md  physical_store_trust.md
agentic-personas/knowledge_base/persona_1/: credit_rewards.md  digital_pre_purchase_influence.md
apps/web/: README.md  package-lock.json
data/: README.md  dados_sinteticos.csv
docs/: agent_quality_report.md  architecture.md  executive-summary.md  manual_instalacao.tex  ml-part1-summary.md  ml-strategy-comparison.md  persona_answer_battery_report.md  persona_answer_quality_criteria.md  rag_architecture.md  relatorio_final.tex
ml-clustering/: README.md  compare_cluster_strategies.py  generate_part1_summary.py  requirements.txt  run_pipeline.py  tune_kmeans_variants.py
ml-clustering/notebooks/: customer_segmentation_clustering.ipynb
(+33 files in other folders)
