[project]
name = "agentic-customer-intelligence"
version = "0.1.0"
description = "Customer segmentation, persona agents, and conversational business intelligence."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.1.0",
    "kmedoids>=0.5.5",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "openai>=1.51.0",
    "pandas>=2.2.0",
    "pgvector>=0.3.0",
    "plotly>=5.24.0",
    "psycopg[binary]>=3.2.0",
    "pymongo>=4.9.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.5.0",
    "scikit-learn-extra>=0.3.0",
    "seaborn>=0.13.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
ml-extra = [
    "umap-learn>=0.5.6",
]
dev = [
    "ruff>=0.6.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
